--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   contacts_service: ^0.4.6
   flutter_launcher_icons: ^0.7.2
   hardware_buttons: ^1.0.0
+  shared_preferences: ^0.5.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
